Add coupon code to signUp.